test/extern/ferguson/param-cname-bad-not-param.good
param-cname-bad-not-param.chpl:5: error: extern name expression must be param
