test/extern/ferguson/param-cname-bad-not-param.chpl
proc getExportedProcName() {
  return "test";
}

export (getExportedProcName()) proc foo() {
  writeln("in foo");
}

foo();
